<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.nostromo</groupId>
    <artifactId>tiffanys</artifactId>
    <version>0.9.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Tiffanys</name>

    <modules>
        <module>tiffanys-commons</module>
        <module>tiffanys-engine</module>
        <module>tiffanys-uci</module>
        <module>tiffanys-testing</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<dependency.lombok.version>1.18.34</dependency.lombok.version>
		<dependency.junit.version>4.13.2</dependency.junit.version>

    </properties>

    <build>
		<pluginManagement>
			<plugins>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
					<configuration>
						<source>21</source>
						<target>21</target>
						<annotationProcessorPaths>
							<annotationProcessorPath>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${dependency.lombok.version}</version>
							</annotationProcessorPath>
						</annotationProcessorPaths>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>

	<dependencies>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${dependency.lombok.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${dependency.junit.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

</project>
